--- a/intrucao_Py.ipynb
+++ b/intrucao_Py.ipynb
@@ -193,6 +193,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c89856d1",
+   "metadata": {},
+   "source": [
+    "##1 - Regras para nomes  de variáveis\n",
+    "##2 - Deve sempre iniciar com uma letra ou o caractere underline (_)\n",
+    "##3 - Pode conter números\n",
+    "##4 - simbolos proibidos (\",:</\\|>{}@$%^&+!)\n",
+    "##5 - Nunca utilizar palavras reservadas "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "6524af60",
@@ -481,8 +493,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "b53b289e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Isto é uma stringIsto é uma \"aspas\" string'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Concatenação de string\n",
+    "minha_string2 + minha_string3 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "a5a7d7a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Isto é uma string e Isto é uma \"aspas\" string'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "minha_string2 + ' e ' + minha_string3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e21f3b2c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'t'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Index\n",
+    "minha_string2[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "07a9e7c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ello'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "minha_string[1:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "274c420d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'olleH'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "minha_string[::-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "f5fb09d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'It  m aps tig'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "minha_string3[::2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c2346c1",
    "metadata": {},
    "outputs": [],
    "source": []
