--- a/intrucao_Py.ipynb
+++ b/intrucao_Py.ipynb
@@ -716,7 +716,6 @@
        " 'index',\n",
        " 'isalnum',\n",
        " 'isalpha',\n",
-       " 'isascii',\n",
        " 'isdecimal',\n",
        " 'isdigit',\n",
        " 'isidentifier',\n",
@@ -732,8 +731,6 @@
        " 'lstrip',\n",
        " 'maketrans',\n",
        " 'partition',\n",
-       " 'removeprefix',\n",
-       " 'removesuffix',\n",
        " 'replace',\n",
        " 'rfind',\n",
        " 'rindex',\n",
@@ -1107,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "c3f62f0b",
    "metadata": {},
    "outputs": [],
@@ -1117,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "id": "c49587b2",
    "metadata": {},
    "outputs": [],
@@ -1127,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "eac04e6f",
    "metadata": {},
    "outputs": [],
@@ -1137,7 +1134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "id": "92a34e04",
    "metadata": {},
    "outputs": [
@@ -1158,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "id": "9b01cf05",
    "metadata": {},
    "outputs": [],
@@ -1168,7 +1165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "id": "8dc67ec2",
    "metadata": {},
    "outputs": [
@@ -1210,7 +1207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "id": "8a6e3d55",
    "metadata": {},
    "outputs": [
@@ -1231,7 +1228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "id": "13ffe61d",
    "metadata": {},
    "outputs": [],
@@ -1241,7 +1238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "id": "08731e7f",
    "metadata": {},
    "outputs": [],
@@ -1251,7 +1248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "id": "e48a337c",
    "metadata": {},
    "outputs": [
@@ -1272,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "id": "da39a073",
    "metadata": {},
    "outputs": [],
@@ -1282,7 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "id": "81bd0b33",
    "metadata": {},
    "outputs": [
@@ -1303,7 +1300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "id": "c5d78016",
    "metadata": {},
    "outputs": [],
@@ -1315,7 +1312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "id": "fe0c4f60",
    "metadata": {},
    "outputs": [],
@@ -1325,7 +1322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "id": "c2efad52",
    "metadata": {},
    "outputs": [
@@ -1346,7 +1343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "id": "68335a1c",
    "metadata": {},
    "outputs": [
@@ -1367,7 +1364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "id": "83129396",
    "metadata": {},
    "outputs": [
@@ -1388,7 +1385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "id": "9fa365c2",
    "metadata": {},
    "outputs": [
@@ -1418,7 +1415,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -1432,7 +1429,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
