--- a/intrucao_Py.ipynb
+++ b/intrucao_Py.ipynb
@@ -1104,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "id": "c3f62f0b",
    "metadata": {},
    "outputs": [],
@@ -1114,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "c49587b2",
    "metadata": {},
    "outputs": [],
@@ -1124,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "id": "eac04e6f",
    "metadata": {},
    "outputs": [],
@@ -1134,7 +1134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "id": "92a34e04",
    "metadata": {},
    "outputs": [
@@ -1155,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "id": "9b01cf05",
    "metadata": {},
    "outputs": [],
@@ -1165,7 +1165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "id": "8dc67ec2",
    "metadata": {},
    "outputs": [
@@ -1186,7 +1186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "id": "0f402a66",
    "metadata": {},
    "outputs": [
@@ -1207,7 +1207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "id": "8a6e3d55",
    "metadata": {},
    "outputs": [
@@ -1228,7 +1228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "id": "13ffe61d",
    "metadata": {},
    "outputs": [],
@@ -1238,7 +1238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "id": "08731e7f",
    "metadata": {},
    "outputs": [],
@@ -1248,7 +1248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "id": "e48a337c",
    "metadata": {},
    "outputs": [
@@ -1258,7 +1258,7 @@
        "['d', 'c', 'b', 'a']"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1269,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "id": "da39a073",
    "metadata": {},
    "outputs": [],
@@ -1279,7 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "id": "81bd0b33",
    "metadata": {},
    "outputs": [
@@ -1289,7 +1289,7 @@
        "['a', 'b', 'c', 'd']"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1300,7 +1300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "id": "c5d78016",
    "metadata": {},
    "outputs": [],
@@ -1312,7 +1312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "id": "fe0c4f60",
    "metadata": {},
    "outputs": [],
@@ -1322,7 +1322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "id": "c2efad52",
    "metadata": {},
    "outputs": [
@@ -1332,7 +1332,7 @@
        "[[1, 2, 3], [4, 5, 6], [7, 8, 9]]"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1343,7 +1343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "id": "68335a1c",
    "metadata": {},
    "outputs": [
@@ -1353,7 +1353,7 @@
        "1"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1364,7 +1364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "id": "83129396",
    "metadata": {},
    "outputs": [
@@ -1374,7 +1374,7 @@
        "7"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1385,7 +1385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "id": "9fa365c2",
    "metadata": {},
    "outputs": [
@@ -1395,7 +1395,7 @@
        "[2, 'Hello', [1, 2, 3]]"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1414,7 +1414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "id": "3de150a9",
    "metadata": {},
    "outputs": [],
@@ -1425,7 +1425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 73,
    "id": "2dfeece8",
    "metadata": {},
    "outputs": [
@@ -1435,7 +1435,7 @@
        "{'nome': 'Leandro', 'idade': 29, 'filhos': ['João', 'Maria']}"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1446,7 +1446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 74,
    "id": "a83c7531",
    "metadata": {},
    "outputs": [
@@ -1456,7 +1456,7 @@
        "'Leandro'"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1467,7 +1467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 75,
    "id": "8ad0ba2c",
    "metadata": {},
    "outputs": [],
@@ -1477,7 +1477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 76,
    "id": "6aab3dfe",
    "metadata": {},
    "outputs": [
@@ -1487,7 +1487,7 @@
        "{'nome': 'Leandro', 'idade': 39, 'filhos': ['João', 'Maria']}"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1498,7 +1498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 77,
    "id": "c049eae3",
    "metadata": {},
    "outputs": [],
@@ -1508,7 +1508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 78,
    "id": "e6eaae85",
    "metadata": {},
    "outputs": [
@@ -1521,7 +1521,7 @@
        " 'cidade': 'Crato'}"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1532,7 +1532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 79,
    "id": "da12ab47",
    "metadata": {},
    "outputs": [],
@@ -1542,7 +1542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 80,
    "id": "b263d141",
    "metadata": {},
    "outputs": [
@@ -1556,7 +1556,7 @@
        " 'variavel aleatoria': {'a': 1, 'b': 2}}"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1567,7 +1567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 81,
    "id": "aaffcb75",
    "metadata": {},
    "outputs": [
@@ -1577,7 +1577,7 @@
        "dict_keys(['nome', 'idade', 'filhos', 'cidade', 'variavel aleatoria'])"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1588,7 +1588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 82,
    "id": "18a0592b",
    "metadata": {},
    "outputs": [
@@ -1598,7 +1598,7 @@
        "dict_values(['Leandro', 39, ['João', 'Maria'], 'Crato', {'a': 1, 'b': 2}])"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1609,7 +1609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 83,
    "id": "5e04a832",
    "metadata": {},
    "outputs": [
@@ -1619,7 +1619,7 @@
        "dict_items([('nome', 'Leandro'), ('idade', 39), ('filhos', ['João', 'Maria']), ('cidade', 'Crato'), ('variavel aleatoria', {'a': 1, 'b': 2})])"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1638,7 +1638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 84,
    "id": "2cc9bd97",
    "metadata": {},
    "outputs": [],
@@ -1648,7 +1648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 85,
    "id": "a5d02d7a",
    "metadata": {},
    "outputs": [
@@ -1658,7 +1658,7 @@
        "(1, 2, 3)"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1669,7 +1669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 86,
    "id": "126d56aa",
    "metadata": {},
    "outputs": [
@@ -1679,7 +1679,7 @@
        "(1, 2, 3)"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1690,7 +1690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 87,
    "id": "72941c05",
    "metadata": {},
    "outputs": [
@@ -1700,7 +1700,7 @@
        "(1, 2)"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1711,7 +1711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 88,
    "id": "e326ed1e",
    "metadata": {},
    "outputs": [],
@@ -1721,7 +1721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 89,
    "id": "c1cd8355",
    "metadata": {},
    "outputs": [
@@ -1731,7 +1731,7 @@
        "1"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1742,7 +1742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 90,
    "id": "80696a30",
    "metadata": {},
    "outputs": [
@@ -1752,7 +1752,7 @@
        "2"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1771,7 +1771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "be25cdf5",
    "metadata": {},
    "outputs": [],
@@ -1781,7 +1781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "e564675d",
    "metadata": {},
    "outputs": [
@@ -1802,7 +1802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "f415a354",
    "metadata": {},
    "outputs": [
@@ -1823,7 +1823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "7755da94",
    "metadata": {},
    "outputs": [],
@@ -1834,7 +1834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "e8115e0b",
    "metadata": {},
    "outputs": [],
@@ -1844,7 +1844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "6ffc4843",
    "metadata": {},
    "outputs": [],
@@ -1854,7 +1854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "5e33c58c",
    "metadata": {},
    "outputs": [],
@@ -1864,7 +1864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "0deaeafb",
    "metadata": {},
    "outputs": [
@@ -1885,7 +1885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "6dcfa6a4",
    "metadata": {},
    "outputs": [],
@@ -1895,7 +1895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "4d68715b",
    "metadata": {},
    "outputs": [
@@ -1916,7 +1916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "58fc7105",
    "metadata": {},
    "outputs": [],
@@ -1926,7 +1926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "84a955ef",
    "metadata": {},
    "outputs": [],
@@ -1936,7 +1936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "16a5fbb7",
    "metadata": {},
    "outputs": [
@@ -1957,7 +1957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "d85d9cc3",
    "metadata": {},
    "outputs": [
@@ -1978,7 +1978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "1f85c048",
    "metadata": {},
    "outputs": [
@@ -1999,7 +1999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "2c9e59ea",
    "metadata": {},
    "outputs": [
@@ -2020,7 +2020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "187cc2ea",
    "metadata": {},
    "outputs": [
@@ -2041,7 +2041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "e6343056",
    "metadata": {},
    "outputs": [],
@@ -2051,7 +2051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "0e386ac8",
    "metadata": {},
    "outputs": [],
@@ -2061,7 +2061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "89155e92",
    "metadata": {},
    "outputs": [
@@ -2082,7 +2082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "ae3befc0",
    "metadata": {},
    "outputs": [
@@ -2103,7 +2103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "2a7dbef7",
    "metadata": {},
    "outputs": [],
@@ -2113,7 +2113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "066caf49",
    "metadata": {},
    "outputs": [
@@ -2144,6 +2144,274 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7054ceef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Igualdade\n",
+    "a = 1 #(Atribuição)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "73ac707a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2 == 2 #(comparação)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "8d2c0590",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1 == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "3bc2d4a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Desiguadade\n",
+    "2 != 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "a7a4682e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2 != 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1c849cae",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Maior que \n",
+    "2 > 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "1e06e210",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2 > 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "a0fe5851",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Menor que\n",
+    "2 < 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "456c99dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2 < 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "8050246f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Maior ou igual que\n",
+    "2 >= 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "5703ffdd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2 >= 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "8ad2e682",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Menor ou igual que \n",
+    "2 <= 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "30580e47",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2 <= 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b5e185c6",
    "metadata": {},
    "outputs": [],
    "source": []
